--- a/snack6/style.css
+++ b/snack6/style.css
@@ -1,8 +1,10 @@
 .boxGray {
     border: 3px solid gray;
+    background-color: lightgray;
 }
 .boxGreen {
     border: 3px solid green;
+    background-color: lightgreen;
 }
 .boxGreen, .boxGray {
     padding: .625rem;
